--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ function get_addresses(address){
         results.push(result + 'út;')
         results.push(result + 'utca;')
     } else {
-      results.push(result + type);
+      results.push(result + type + ';');
     }
   }
 
