--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ function generate(){
 
   let output = '';
   for (let i = 0; i < allresults.length; i++){
-    output += allresults[i]toUpperCase() + "\r\n";
+    output += allresults[i].toUpperCase() + "\r\n";
   }
   document.getElementById('results').innerHTML = output;
 }
